2011-09-18  Dan Bernstein  <mitz@apple.com>

        Snow Leopard build fix after r95391.

        * platform/graphics/mac/ComplexTextControllerCoreText.cpp:
        (WebCore::ComplexTextController::collectComplexTextRunsForCharactersCoreText):

2011-09-18  Dan Bernstein  <mitz@apple.com>

        Leopard build fix after r95391.

        * platform/graphics/mac/ComplexTextControllerATSUI.cpp:
        (WebCore::ComplexTextController::collectComplexTextRunsForCharactersATSUI):

2011-09-18  Dan Bernstein  <mitz@apple.com>

        Allow Core Text to choose the fallback font for rendering a combining character sequence

        Fixes <rdar://problem/7860281> Decomposed text is displayed incorrectly when Verdana is specified
        https://bugs.webkit.org/show_bug.cgi?id=68287

        Reviewed by Dave Hyatt.

        Test: platform/mac/fast/text/combining-character-sequence-fallback.html

        * WebCore.xcodeproj/project.pbxproj: Compile ComplexTextControllerCoreText.cpp as Objective-C++.
        I am going to rename this file in a followup patch.

        * platform/graphics/Font.h: Declared fontDataForCombiningCharacterSequence().

        * platform/graphics/SimpleFontData.h: Declared canRenderCombiningCharacterSequence() and added
        a member variable to cache the results of calling this function.

        * platform/graphics/mac/ComplexTextController.cpp:
        (WebCore::ComplexTextController::offsetForPosition): Fixed a typo in a comment.
        (WebCore::advanceByCombiningCharacterSequence): Added this helper function, which iterates over
        characters until the end of a sequence of combining characters, zero-width joiners and zero-width
        non-joiners. A single base characater followed by such a (possibly-empty) sequence is known as
        a combining character sequence. This stretches the definition a little because the base character